--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "react-simple-star-rating": "^5.1.7",
+    "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "toastify": "^2.0.1",
