--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.3",
     "firebase": "^11.6.0",
+    "html2canvas": "^1.4.1",
     "humanize-duration": "^3.32.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
