--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-to-print": "^3.1.1",
     "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
+    "recharts": "^3.2.1",
     "toastify": "^2.0.1",
     "uniqid": "^5.4.0"
   },
